crates/rlf-macros/tests/fail/empty_interpolation.rs
use rlf::rlf;

rlf! {
    bad = "{}";
}

fn main() {}
