crates/rlf-macros/tests/fail/empty_interpolation.stderr
error: empty interpolation
 --> tests/fail/empty_interpolation.rs:4:11
  |
4 |     bad = "{}";
  |           ^^^^
